chore: Webui渲染调整，私聊流式消息，官机消息体拆分，方法扩增